package SmartHome.ddd;

import lombok.EqualsAndHashCode;

@EqualsAndHashCode
public abstract class ValueObject {

}
